@@ -6,7 +6,6 @@ import jakarta.transaction.Transactional;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service("reportTypeService")
 public class ReportTypeService {
@@ -50,11 +49,11 @@ public class ReportTypeService {
                 .orElseThrow(() -> new ResourceNotFoundException("找不到檢舉類型，ID: " + rpiNo));
     }
 
-    public List<ReportTypeDTO> getAllReportType() {
-        List<ReportType> reportTypes = reportTypeRepository.findAll();
+    public List<ReportTypeDTO> getAllReportTypes() {
 
-        return reportTypes.stream()
-                .map(rt -> new ReportTypeDTO(rt.getId(), rt.getRpiType()))
-                .collect(Collectors.toList());
+        return reportTypeRepository.findAll().stream()
+                .map(ReportTypeDTO::convertToReportTypeDTO)
+                .toList();
     }
+
 }
